--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,18 +13,23 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
+
     - run: npm ci
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
+
     - name: Build Android
       run: npm run android
 
     - name: Build Windows
       run: npm run dist
+
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -32,4 +37,5 @@ jobs:
         prerelease: false
         title: "GreenHub Build"
         files: |
-          dist/*.exe
+          dist/*.exe |
+          platforms/android/app/build/outputs/apk/**/*.apk
