pwa works, added shield

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 	"cordova": {
 		"plugins": {
 			"cordova-plugin-whitelist": {}
-		}
+		},
+		"platforms": []
 	},
 	"main": "./electron/greenhub.js",
 	"devDependencies": {
