--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,45 @@
 name: Build a GreenHub Project
-on: 
-  push: 
-    branches: [ "main" ]
-    
+on:
+  push:
+    branches: ['main']
+
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@master
+      - uses: actions/checkout@master
 
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
-    - run: npm ci
+      - run: npm ci
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
 
-    - name: Build Android
-      run: npm run android
+      - name: Build Android
+        run: npm run android
 
-    - name: Build Windows
-      run: npm run dist
+      - name: Build All
+        run: npm run dist
 
-    - uses: "marvinpinto/action-automatic-releases@latest"
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
-        prerelease: false
-        title: "GreenHub Build"
-        files: |
-          dist/*.exe
-          platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
+      - uses: 'marvinpinto/action-automatic-releases@latest'
+        with:
+          repo_token: '${{ secrets.GITHUB_TOKEN }}'
+          automatic_release_tag: 'latest'
+          prerelease: false
+          title: 'GreenHub Build'
+          files: |
+            dist/*.exe
+            dist/*.dmg
+            dist/*.deb
+            dist/*.rpm
+            dist/*.freebsd
+            platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
