--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
 
       - run: npm ci
 
+      - name: Build All
+        run: npm run dist-all
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -26,9 +29,6 @@ jobs:
 
       - name: Build Android
         run: npm run android
-
-      - name: Build All
-        run: npm run dist
 
       - uses: 'marvinpinto/action-automatic-releases@latest'
         with:
