--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@master
 
@@ -15,9 +15,6 @@ jobs:
           node-version: '12.x'
 
       - run: npm ci
-
-      - name: Build All
-        run: npm run dist-all
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -30,16 +27,15 @@ jobs:
       - name: Build Android
         run: npm run android
 
+      - name: Build Windows
+        run: npm run dist
+
       - uses: 'marvinpinto/action-automatic-releases@latest'
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
           automatic_release_tag: 'latest'
           prerelease: false
-          title: 'GreenHub Build'
+          title: 'Win/Android Build'
           files: |
             dist/*.exe
-            dist/*.dmg
-            dist/*.deb
-            dist/*.rpm
-            dist/*.freebsd
             platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
