--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: 'marvinpinto/action-automatic-releases@latest'
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: 'latest:win'
+          automatic_release_tag: 'win'
           prerelease: false
           title: 'Win'
           files: |
