even more sign up I guess?

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "green-hub",
 	"version": "0.0.2",
-	"author": "A Goblin King",
+	"author": "A Goblin King <king@goblin.life> (https://goblin.life)",
 	"email": "king@goblin.life",
 	"license": "Apache-2.0",
 	"description": "Deploy and build games to Steam / Itch using Electron and Greenworks with GitHub Actions",
