linux support online

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -26,4 +26,7 @@ jobs:
           prerelease: false
           title: 'Linux'
           files: |
+            dist/*.freebsd
+            dist/*.deb
+            dist/*.rpm
             dist/*.zip
